xidlc/tests/snapshots/codegen_snapshot__golang-http__http_query_template.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
xidlc.go
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

package xidlc
===============
xidlc_http.go
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

package xidlc

import (
	"bytes"
	"context"
	"fmt"
	"net/http"
	"net/url"
	"strings"

	"github.com/gin-gonic/gin"
	xidlgohttp "github.com/xidl/xidl/golang/xidl-go-rest"
)

var (
	_ = bytes.Buffer{}
	_ = fmt.Sprintf
	_ = url.Values{}
	_ = strings.TrimSpace
)

type HttpQueryTemplateServiceService interface {
	GetUser(ctx context.Context, req *HttpQueryTemplateServiceGetUserRequest) (*HttpQueryTemplateServiceGetUserResponse, error)
	Search(ctx context.Context, req *HttpQueryTemplateServiceSearchRequest) (*HttpQueryTemplateServiceSearchResponse, error)
}

func RegisterHttpQueryTemplateServiceHandler(r gin.IRouter, svc HttpQueryTemplateServiceService) {
	r.GET("/users/:id", func(c *gin.Context) {
		if err := xidlgohttp.GinRequireAccept(c, "application/json"); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusNotAcceptable, http.StatusNotAcceptable, err.Error())
			return
		}

		req := &HttpQueryTemplateServiceGetUserRequest{}

		if raw, err := xidlgohttp.GinPathString(c, "id"); err == nil {
			if value, parseErr := xidlgohttp.ParseUint32(raw); parseErr == nil {
				req.Id = value
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, parseErr.Error())
				return
			}
		} else {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}

		if value, err := xidlgohttp.QueryString(c.Request.URL.Query(), "lang"); err == nil {
			req.Lang = value
		} else {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}

		if value, err := xidlgohttp.QueryString(c.Request.URL.Query(), "region"); err == nil {
			req.Region = value
		} else {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}
		resp, err := svc.GetUser(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		if err := xidlgohttp.GinEncodeBody(c, "application/json", resp.Return); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
	r.POST("/search", func(c *gin.Context) {
		if err := xidlgohttp.GinRequireAccept(c, "application/json"); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusNotAcceptable, http.StatusNotAcceptable, err.Error())
			return
		}
		if err := xidlgohttp.GinRequireContentType(c, "application/json"); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusUnsupportedMediaType, http.StatusUnsupportedMediaType, err.Error())
			return
		}

		req := &HttpQueryTemplateServiceSearchRequest{}

		if value, err := xidlgohttp.QueryString(c.Request.URL.Query(), "keyword"); err == nil {
			req.Keyword = value
		} else {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}
		body := HttpQueryTemplateServiceSearchRequestBody{}
		if err := xidlgohttp.GinDecodeBody(c, "application/json", &body); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}
		req.Payload = body.Payload
		resp, err := svc.Search(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		if err := xidlgohttp.GinEncodeBody(c, "application/json", resp.Return); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
}

type HttpQueryTemplateServiceClient struct {
	baseURL    string
	httpClient *http.Client
	auth       xidlgohttp.ClientAuth
}

func NewHttpQueryTemplateServiceClient(baseURL string, httpClient *http.Client, auth xidlgohttp.ClientAuth) *HttpQueryTemplateServiceClient {
	if httpClient == nil {
		httpClient = http.DefaultClient
	}
	return &HttpQueryTemplateServiceClient{baseURL: strings.TrimRight(baseURL, "/"), httpClient: httpClient, auth: auth}
}

func (c *HttpQueryTemplateServiceClient) GetUser(ctx context.Context, req *HttpQueryTemplateServiceGetUserRequest) (*HttpQueryTemplateServiceGetUserResponse, error) {
	requestURL := c.baseURL + formatHttpQueryTemplateServiceGetUserPath(req)
	query := url.Values{}

	query.Set("lang", req.Lang)

	query.Set("region", req.Region)
	if encoded := query.Encode(); encoded != "" {
		requestURL += "?" + encoded
	}
	httpReq, err := http.NewRequestWithContext(ctx, "GET", requestURL, nil)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Accept", "application/json")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpQueryTemplateServiceGetUserResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

func (c *HttpQueryTemplateServiceClient) Search(ctx context.Context, req *HttpQueryTemplateServiceSearchRequest) (*HttpQueryTemplateServiceSearchResponse, error) {
	requestURL := c.baseURL + formatHttpQueryTemplateServiceSearchPath(req)
	query := url.Values{}

	query.Set("keyword", req.Keyword)
	if encoded := query.Encode(); encoded != "" {
		requestURL += "?" + encoded
	}
	body := HttpQueryTemplateServiceSearchRequestBody{
		Payload: req.Payload,
	}
	var requestBody bytes.Buffer
	if err := xidlgohttp.MustCodecForMime("application/json").Encode(&requestBody, body); err != nil {
		return nil, err
	}
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, &requestBody)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Content-Type", "application/json")
	httpReq.Header.Set("Accept", "application/json")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpQueryTemplateServiceSearchResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

type HttpQueryTemplateServiceGetUserRequest struct {
	Id     uint32 `xjson:"id" form:"id"`
	Lang   string `xjson:"lang" form:"lang"`
	Region string `xjson:"region" form:"region"`
}

type HttpQueryTemplateServiceGetUserResponse struct {
	Return string `xjson:"return"`
}

func HttpQueryTemplateServiceGetUserSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpQueryTemplateServiceGetUserDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpQueryTemplateServiceGetUserPath(req *HttpQueryTemplateServiceGetUserRequest) string {
	path := "/users/{id}"
	path = strings.ReplaceAll(path, "{id}", xidlgohttp.FormatUint32(req.Id))
	path = strings.ReplaceAll(path, "{*id}", xidlgohttp.FormatUint32(req.Id))
	return path
}
func decodeHttpQueryTemplateServiceGetUserResponse(resp *http.Response) (HttpQueryTemplateServiceGetUserResponse, error) {
	out := HttpQueryTemplateServiceGetUserResponse{}
	var body string
	if err := xidlgohttp.MustCodecForMime("application/json").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body
	return out, nil
}

type HttpQueryTemplateServiceSearchRequest struct {
	Keyword string `xjson:"keyword" form:"keyword"`
	Payload string `xjson:"payload" form:"payload"`
}

type HttpQueryTemplateServiceSearchRequestBody struct {
	Payload string `xjson:"payload" form:"payload"`
}

type HttpQueryTemplateServiceSearchResponse struct {
	Return string `xjson:"return"`
}

func HttpQueryTemplateServiceSearchSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpQueryTemplateServiceSearchDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpQueryTemplateServiceSearchPath(req *HttpQueryTemplateServiceSearchRequest) string {
	path := "/search"
	return path
}
func decodeHttpQueryTemplateServiceSearchResponse(resp *http.Response) (HttpQueryTemplateServiceSearchResponse, error) {
	out := HttpQueryTemplateServiceSearchResponse{}
	var body string
	if err := xidlgohttp.MustCodecForMime("application/json").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body
	return out, nil
}
