xidlc/tests/snapshots/codegen_snapshot__golang-http__http_response_shape.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
xidlc.go
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

package xidlc
===============
xidlc_http.go
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

package xidlc

import (
	"bytes"
	"context"
	"fmt"
	"net/http"
	"net/url"
	"strings"

	"github.com/gin-gonic/gin"
	xidlgohttp "github.com/xidl/xidl/golang/xidl-go-rest"
)

var (
	_ = bytes.Buffer{}
	_ = fmt.Sprintf
	_ = url.Values{}
	_ = strings.TrimSpace
)

type HttpResponseShapeServiceService interface {
	Hello(ctx context.Context, req *HttpResponseShapeServiceHelloRequest) (*HttpResponseShapeServiceHelloResponse, error)
	GetCount(ctx context.Context, req *HttpResponseShapeServiceGetCountRequest) (*HttpResponseShapeServiceGetCountResponse, error)
	Add(ctx context.Context, req *HttpResponseShapeServiceAddRequest) (*HttpResponseShapeServiceAddResponse, error)
	Bump(ctx context.Context, req *HttpResponseShapeServiceBumpRequest) (*HttpResponseShapeServiceBumpResponse, error)
	Ping(ctx context.Context, req *HttpResponseShapeServicePingRequest) (*HttpResponseShapeServicePingResponse, error)
}

func RegisterHttpResponseShapeServiceHandler(r gin.IRouter, svc HttpResponseShapeServiceService) {
	r.POST("/hello", func(c *gin.Context) {

		req := &HttpResponseShapeServiceHelloRequest{}
		resp, err := svc.Hello(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		if err := xidlgohttp.GinEncodeBody(c, "text/plain", resp.Return); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
	r.POST("/get_count", func(c *gin.Context) {

		req := &HttpResponseShapeServiceGetCountRequest{}
		resp, err := svc.GetCount(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		if err := xidlgohttp.GinEncodeBody(c, "text/plain", resp.Count); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
	r.POST("/add", func(c *gin.Context) {

		req := &HttpResponseShapeServiceAddRequest{}
		body := HttpResponseShapeServiceAddRequestBody{}
		if err := xidlgohttp.GinDecodeBody(c, "application/json", &body); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}
		req.A = body.A
		req.B = body.B
		resp, err := svc.Add(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		respBody := HttpResponseShapeServiceAddResponseBody{
			Return: resp.Return,
			Sum:    resp.Sum,
		}
		if err := xidlgohttp.GinEncodeBody(c, "application/json", respBody); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
	r.POST("/bump", func(c *gin.Context) {

		req := &HttpResponseShapeServiceBumpRequest{}
		var body int32
		if err := xidlgohttp.GinDecodeBody(c, "text/plain", &body); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}
		req.Value = body
		resp, err := svc.Bump(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		respBody := HttpResponseShapeServiceBumpResponseBody{
			Return: resp.Return,
			Value:  resp.Value,
		}
		if err := xidlgohttp.GinEncodeBody(c, "application/json", respBody); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
	r.POST("/ping", func(c *gin.Context) {

		req := &HttpResponseShapeServicePingRequest{}
		if _, err := svc.Ping(c.Request.Context(), req); err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}
		c.Status(http.StatusNoContent)
	})
}

type HttpResponseShapeServiceClient struct {
	baseURL    string
	httpClient *http.Client
	auth       xidlgohttp.ClientAuth
}

func NewHttpResponseShapeServiceClient(baseURL string, httpClient *http.Client, auth xidlgohttp.ClientAuth) *HttpResponseShapeServiceClient {
	if httpClient == nil {
		httpClient = http.DefaultClient
	}
	return &HttpResponseShapeServiceClient{baseURL: strings.TrimRight(baseURL, "/"), httpClient: httpClient, auth: auth}
}

func (c *HttpResponseShapeServiceClient) Hello(ctx context.Context, req *HttpResponseShapeServiceHelloRequest) (*HttpResponseShapeServiceHelloResponse, error) {
	requestURL := c.baseURL + formatHttpResponseShapeServiceHelloPath(req)
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, nil)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Accept", "text/plain")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpResponseShapeServiceHelloResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

func (c *HttpResponseShapeServiceClient) GetCount(ctx context.Context, req *HttpResponseShapeServiceGetCountRequest) (*HttpResponseShapeServiceGetCountResponse, error) {
	requestURL := c.baseURL + formatHttpResponseShapeServiceGetCountPath(req)
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, nil)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Accept", "text/plain")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpResponseShapeServiceGetCountResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

func (c *HttpResponseShapeServiceClient) Add(ctx context.Context, req *HttpResponseShapeServiceAddRequest) (*HttpResponseShapeServiceAddResponse, error) {
	requestURL := c.baseURL + formatHttpResponseShapeServiceAddPath(req)
	body := HttpResponseShapeServiceAddRequestBody{
		A: req.A,
		B: req.B,
	}
	var requestBody bytes.Buffer
	if err := xidlgohttp.MustCodecForMime("application/json").Encode(&requestBody, body); err != nil {
		return nil, err
	}
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, &requestBody)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Content-Type", "application/json")
	httpReq.Header.Set("Accept", "application/json")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpResponseShapeServiceAddResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

func (c *HttpResponseShapeServiceClient) Bump(ctx context.Context, req *HttpResponseShapeServiceBumpRequest) (*HttpResponseShapeServiceBumpResponse, error) {
	requestURL := c.baseURL + formatHttpResponseShapeServiceBumpPath(req)
	body := req.Value
	var requestBody bytes.Buffer
	if err := xidlgohttp.MustCodecForMime("text/plain").Encode(&requestBody, body); err != nil {
		return nil, err
	}
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, &requestBody)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Content-Type", "text/plain")
	httpReq.Header.Set("Accept", "application/json")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpResponseShapeServiceBumpResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

func (c *HttpResponseShapeServiceClient) Ping(ctx context.Context, req *HttpResponseShapeServicePingRequest) (*HttpResponseShapeServicePingResponse, error) {
	requestURL := c.baseURL + formatHttpResponseShapeServicePingPath(req)
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, nil)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Accept", "")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpResponseShapeServicePingResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

type HttpResponseShapeServiceHelloRequest struct {
}

type HttpResponseShapeServiceHelloResponse struct {
	Return string `xjson:"return"`
}

func HttpResponseShapeServiceHelloSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpResponseShapeServiceHelloDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpResponseShapeServiceHelloPath(req *HttpResponseShapeServiceHelloRequest) string {
	path := "/hello"
	return path
}
func decodeHttpResponseShapeServiceHelloResponse(resp *http.Response) (HttpResponseShapeServiceHelloResponse, error) {
	out := HttpResponseShapeServiceHelloResponse{}
	var body string
	if err := xidlgohttp.MustCodecForMime("text/plain").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body
	return out, nil
}

type HttpResponseShapeServiceGetCountRequest struct {
}

type HttpResponseShapeServiceGetCountResponse struct {
	Count int32 `xjson:"count"`
}

func HttpResponseShapeServiceGetCountSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpResponseShapeServiceGetCountDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpResponseShapeServiceGetCountPath(req *HttpResponseShapeServiceGetCountRequest) string {
	path := "/get_count"
	return path
}
func decodeHttpResponseShapeServiceGetCountResponse(resp *http.Response) (HttpResponseShapeServiceGetCountResponse, error) {
	out := HttpResponseShapeServiceGetCountResponse{}
	var body int32
	if err := xidlgohttp.MustCodecForMime("text/plain").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Count = body
	return out, nil
}

type HttpResponseShapeServiceAddRequest struct {
	A int32 `xjson:"a" form:"a"`
	B int32 `xjson:"b" form:"b"`
}

type HttpResponseShapeServiceAddRequestBody struct {
	A int32 `xjson:"a" form:"a"`
	B int32 `xjson:"b" form:"b"`
}

type HttpResponseShapeServiceAddResponse struct {
	Return int32 `xjson:"return"`
	Sum    int32 `xjson:"sum"`
}

type HttpResponseShapeServiceAddResponseBody struct {
	Return int32 `xjson:"return"`
	Sum    int32 `xjson:"sum"`
}

func HttpResponseShapeServiceAddSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpResponseShapeServiceAddDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpResponseShapeServiceAddPath(req *HttpResponseShapeServiceAddRequest) string {
	path := "/add"
	return path
}
func decodeHttpResponseShapeServiceAddResponse(resp *http.Response) (HttpResponseShapeServiceAddResponse, error) {
	out := HttpResponseShapeServiceAddResponse{}
	body := HttpResponseShapeServiceAddResponseBody{}
	if err := xidlgohttp.MustCodecForMime("application/json").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body.Return
	out.Sum = body.Sum
	return out, nil
}

type HttpResponseShapeServiceBumpRequest struct {
	Value int32 `xjson:"value" form:"value"`
}

type HttpResponseShapeServiceBumpResponse struct {
	Return int32 `xjson:"return"`
	Value  int32 `xjson:"value"`
}

type HttpResponseShapeServiceBumpResponseBody struct {
	Return int32 `xjson:"return"`
	Value  int32 `xjson:"value"`
}

func HttpResponseShapeServiceBumpSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpResponseShapeServiceBumpDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpResponseShapeServiceBumpPath(req *HttpResponseShapeServiceBumpRequest) string {
	path := "/bump"
	return path
}
func decodeHttpResponseShapeServiceBumpResponse(resp *http.Response) (HttpResponseShapeServiceBumpResponse, error) {
	out := HttpResponseShapeServiceBumpResponse{}
	body := HttpResponseShapeServiceBumpResponseBody{}
	if err := xidlgohttp.MustCodecForMime("application/json").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body.Return
	out.Value = body.Value
	return out, nil
}

type HttpResponseShapeServicePingRequest struct {
}

type HttpResponseShapeServicePingResponse struct {
}

func HttpResponseShapeServicePingSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpResponseShapeServicePingDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpResponseShapeServicePingPath(req *HttpResponseShapeServicePingRequest) string {
	path := "/ping"
	return path
}
func decodeHttpResponseShapeServicePingResponse(resp *http.Response) (HttpResponseShapeServicePingResponse, error) {
	out := HttpResponseShapeServicePingResponse{}
	return out, nil
}
