xidlc/tests/snapshots/codegen_snapshot__golang-http__http_security.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
xidlc.go
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

package xidlc
===============
xidlc_http.go
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

package xidlc

import (
	"bytes"
	"context"
	"fmt"
	"net/http"
	"net/url"
	"strings"

	"github.com/gin-gonic/gin"
	xidlgohttp "github.com/xidl/xidl/golang/xidl-go-rest"
)

var (
	_ = bytes.Buffer{}
	_ = fmt.Sprintf
	_ = url.Values{}
	_ = strings.TrimSpace
)

type HttpSecurityServiceService interface {
	GetUser(ctx context.Context, req *HttpSecurityServiceGetUserRequest) (*HttpSecurityServiceGetUserResponse, error)
	SearchUser(ctx context.Context, req *HttpSecurityServiceSearchUserRequest) (*HttpSecurityServiceSearchUserResponse, error)
	Health(ctx context.Context, req *HttpSecurityServiceHealthRequest) (*HttpSecurityServiceHealthResponse, error)
}

func RegisterHttpSecurityServiceHandler(r gin.IRouter, svc HttpSecurityServiceService) {
	r.GET("/users/:id", func(c *gin.Context) {
		ctx, err := xidlgohttp.RequireAuth(c.Request, HttpSecurityServiceGetUserSecurityRequirements())
		if err != nil {
			xidlgohttp.Unauthorized(c.Writer, HttpSecurityServiceGetUserSecurityRequirements())
			return
		}
		c.Request = c.Request.WithContext(ctx)

		req := &HttpSecurityServiceGetUserRequest{}

		if raw, err := xidlgohttp.GinPathString(c, "id"); err == nil {
			if value, parseErr := xidlgohttp.ParseUint32(raw); parseErr == nil {
				req.Id = value
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, parseErr.Error())
				return
			}
		} else {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}

		req.Locale = xidlgohttp.QueryOptionalString(c.Request.URL.Query(), "locale")

		if value, err := xidlgohttp.HeaderString(c.Request.Header, "X-Trace-Id"); err == nil {
			req.TraceId = value
		} else {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}
		resp, err := svc.GetUser(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		if err := xidlgohttp.GinEncodeBody(c, "text/plain", resp.Return); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
	r.POST("/users/search", func(c *gin.Context) {

		req := &HttpSecurityServiceSearchUserRequest{}
		body := HttpSecurityServiceSearchUserRequestBody{}
		if err := xidlgohttp.GinDecodeBody(c, "application/json", &body); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusBadRequest, http.StatusBadRequest, err.Error())
			return
		}
		req.Keyword = body.Keyword
		req.Page = body.Page
		resp, err := svc.SearchUser(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		if err := xidlgohttp.GinEncodeBody(c, "text/plain", resp.Return); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
	r.POST("/health", func(c *gin.Context) {

		req := &HttpSecurityServiceHealthRequest{}
		resp, err := svc.Health(c.Request.Context(), req)
		if err != nil {
			if httpErr, ok := err.(*xidlgohttp.HttpError); ok {
				xidlgohttp.GinWriteJSONError(c, httpErr.Status, httpErr.Code, httpErr.Message)
			} else {
				xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
			}
			return
		}

		if err := xidlgohttp.GinEncodeBody(c, "text/plain", resp.Return); err != nil {
			xidlgohttp.GinWriteJSONError(c, http.StatusInternalServerError, http.StatusInternalServerError, err.Error())
		}
	})
}

type HttpSecurityServiceClient struct {
	baseURL    string
	httpClient *http.Client
	auth       xidlgohttp.ClientAuth
}

func NewHttpSecurityServiceClient(baseURL string, httpClient *http.Client, auth xidlgohttp.ClientAuth) *HttpSecurityServiceClient {
	if httpClient == nil {
		httpClient = http.DefaultClient
	}
	return &HttpSecurityServiceClient{baseURL: strings.TrimRight(baseURL, "/"), httpClient: httpClient, auth: auth}
}

func (c *HttpSecurityServiceClient) GetUser(ctx context.Context, req *HttpSecurityServiceGetUserRequest) (*HttpSecurityServiceGetUserResponse, error) {
	requestURL := c.baseURL + formatHttpSecurityServiceGetUserPath(req)
	query := url.Values{}

	if req.Locale != nil {
		query.Set("locale", *req.Locale)
	}
	if encoded := query.Encode(); encoded != "" {
		requestURL += "?" + encoded
	}
	httpReq, err := http.NewRequestWithContext(ctx, "GET", requestURL, nil)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Accept", "text/plain")

	httpReq.Header.Set("X-Trace-Id", req.TraceId)
	xidlgohttp.ApplyClientAuth(httpReq, c.auth, HttpSecurityServiceGetUserSecurityRequirements())
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpSecurityServiceGetUserResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

func (c *HttpSecurityServiceClient) SearchUser(ctx context.Context, req *HttpSecurityServiceSearchUserRequest) (*HttpSecurityServiceSearchUserResponse, error) {
	requestURL := c.baseURL + formatHttpSecurityServiceSearchUserPath(req)
	body := HttpSecurityServiceSearchUserRequestBody{
		Keyword: req.Keyword,
		Page:    req.Page,
	}
	var requestBody bytes.Buffer
	if err := xidlgohttp.MustCodecForMime("application/json").Encode(&requestBody, body); err != nil {
		return nil, err
	}
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, &requestBody)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Content-Type", "application/json")
	httpReq.Header.Set("Accept", "text/plain")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpSecurityServiceSearchUserResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

func (c *HttpSecurityServiceClient) Health(ctx context.Context, req *HttpSecurityServiceHealthRequest) (*HttpSecurityServiceHealthResponse, error) {
	requestURL := c.baseURL + formatHttpSecurityServiceHealthPath(req)
	httpReq, err := http.NewRequestWithContext(ctx, "POST", requestURL, nil)
	if err != nil {
		return nil, err
	}
	httpReq.Header.Set("Accept", "text/plain")
	resp, err := c.httpClient.Do(httpReq)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("http %d", resp.StatusCode)
	}
	decoded, err := decodeHttpSecurityServiceHealthResponse(resp)
	if err != nil {
		return nil, err
	}
	return &decoded, nil
}

type HttpSecurityServiceGetUserRequest struct {
	Id      uint32  `xjson:"id" form:"id"`
	Locale  *string `xjson:"locale" form:"locale"`
	TraceId string  `xjson:"trace_id" form:"trace_id"`
}

type HttpSecurityServiceGetUserResponse struct {
	Return string `xjson:"return"`
}

func HttpSecurityServiceGetUserSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{
		{Kind: xidlgohttp.SecurityBasic, Realm: "getuser"},
		{Kind: xidlgohttp.SecurityAPIKey, Location: xidlgohttp.ApiKeyHeader, Name: "X-API-Key"},
	}
}

func HttpSecurityServiceGetUserDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: true,
		Since:      "2026-03-13T00:00:00Z",
		Note:       "Deprecated. Since 2026-03-13T00:00:00Z.",
	}
}

func formatHttpSecurityServiceGetUserPath(req *HttpSecurityServiceGetUserRequest) string {
	path := "/users/{id}"
	path = strings.ReplaceAll(path, "{id}", xidlgohttp.FormatUint32(req.Id))
	path = strings.ReplaceAll(path, "{*id}", xidlgohttp.FormatUint32(req.Id))
	return path
}
func decodeHttpSecurityServiceGetUserResponse(resp *http.Response) (HttpSecurityServiceGetUserResponse, error) {
	out := HttpSecurityServiceGetUserResponse{}
	var body string
	if err := xidlgohttp.MustCodecForMime("text/plain").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body
	return out, nil
}

type HttpSecurityServiceSearchUserRequest struct {
	Keyword string  `xjson:"keyword" form:"keyword"`
	Page    *uint32 `xjson:"page" form:"page"`
}

type HttpSecurityServiceSearchUserRequestBody struct {
	Keyword string  `xjson:"keyword" form:"keyword"`
	Page    *uint32 `xjson:"page" form:"page"`
}

type HttpSecurityServiceSearchUserResponse struct {
	Return string `xjson:"return"`
}

func HttpSecurityServiceSearchUserSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpSecurityServiceSearchUserDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: false,
	}
}

func formatHttpSecurityServiceSearchUserPath(req *HttpSecurityServiceSearchUserRequest) string {
	path := "/users/search"
	return path
}
func decodeHttpSecurityServiceSearchUserResponse(resp *http.Response) (HttpSecurityServiceSearchUserResponse, error) {
	out := HttpSecurityServiceSearchUserResponse{}
	var body string
	if err := xidlgohttp.MustCodecForMime("text/plain").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body
	return out, nil
}

type HttpSecurityServiceHealthRequest struct {
}

type HttpSecurityServiceHealthResponse struct {
	Return string `xjson:"return"`
}

func HttpSecurityServiceHealthSecurityRequirements() []xidlgohttp.SecurityRequirement {
	return []xidlgohttp.SecurityRequirement{}
}

func HttpSecurityServiceHealthDeprecated() xidlgohttp.DeprecatedInfo {
	return xidlgohttp.DeprecatedInfo{
		Deprecated: true,
		Since:      "2026-03-13T00:00:00Z",
		After:      "2026-03-14T23:59:59Z",
		Note:       "Deprecated. Since 2026-03-13T00:00:00Z. After 2026-03-14T23:59:59Z.",
	}
}

func formatHttpSecurityServiceHealthPath(req *HttpSecurityServiceHealthRequest) string {
	path := "/health"
	return path
}
func decodeHttpSecurityServiceHealthResponse(resp *http.Response) (HttpSecurityServiceHealthResponse, error) {
	out := HttpSecurityServiceHealthResponse{}
	var body string
	if err := xidlgohttp.MustCodecForMime("text/plain").Decode(resp.Body, &body); err != nil {
		return out, err
	}
	out.Return = body
	return out, nil
}
